Created HTML files: Resume, background, edu, and projects

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
         <h1>Welcome</h1>
         <p>Here you will find quicklinks to:</p>
         <ol type="1">
-            <li><strong>Resume</strong></li>
-            <li><strong>Projects</strong></li>
-            <li><strong>Education</strong></li>
-            <li><strong>Background and Hobbies</strong></li>
+            <li><strong><a href="./pages/resume.html">Resume</a></strong></li>
+            <li><strong><a href="./pages/created_projects.html">Projects</a></strong></li>
+            <li><strong><a href="./pages/education.html">Education</a></strong></li>
+            <li><strong><a href="./pages/background_and_hobbies.html">Background and Hobbies</a></strong></li>
+            <li><strong><a href="https://www.linkedin.com/in/edmondhlau/">LinkedIn</a></strong></li>
         </ol>
     </body>
 </html>
