Added other files and styles

--- a/pages/education.html
+++ b/pages/education.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <head>
         <meta charset-"utf-8">
         <title>Education</title>
+        <link rel = "stylesheet" href = "../styles.css">
     </head>
     <body>
-        <h1>Education</h1>
-        <h2>School</h2>
+        <div class = "banner">
+            <div class = "navbar">
+                <img src="../pictures/logo.jpg" class="logo" alt="EL logo">
+                <ul>
+                    <li><a href = "resume.html">Resume</a></li>
+                    <li><a href = "created_projects.html">Projects</a></li>
+                    <li><a href = "education.html">Education</a></li>
+                </ul>
+            </div>
+            <div class = "content">
+                <h1>EDUCATION</h1>
+                <p>A list of my education including relevant classes<br>taken and its course description.</p>
+            </div>
+        </div>
     </body>
 </html>
