--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <head>
         <meta charset-"utf-8">
         <title>Home Page</title>
+        <link rel = "stylesheet" href = "styles.css">
     </head>
     <body>
-        <h1>Welcome</h1>
-        <p>Here you will find quicklinks to:</p>
-        <ol type="1">
-            <li><strong><a href="./pages/resume.html">Resume</a></strong></li>
-            <li><strong><a href="./pages/created_projects.html">Projects</a></strong></li>
-            <li><strong><a href="./pages/education.html">Education</a></strong></li>
-            <li><strong><a href="./pages/background_and_hobbies.html">Background and Hobbies</a></strong></li>
-            <li><strong><a href="https://www.linkedin.com/in/edmondhlau/">LinkedIn</a></strong></li>
-        </ol>
+        <div class = "banner">
+            <div class = "navbar">
+                <img src="pictures/logo.jpg" class="logo" alt="EL logo">
+                <ul>
+                    <li><a href = "pages/resume.html">Resume</a></li>
+                    <li><a href = "pages/created_projects.html">Projects</a></li>
+                    <li><a href = "pages/education.html">Education</a></li>
+                </ul>
+            </div>
+            <div class = "content">
+                <h1>WELCOME AND EXPLORE</h1>
+                <p>I have designed these pages to display <br>my skills, abilities, and projects.</p>
+            </div>
+        </div>
     </body>
 </html>
