--- a/pages/created_projects.html
+++ b/pages/created_projects.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <head>
         <meta charset-"utf-8">
         <title>Created Projects</title>
+        <link rel = "stylesheet" href = "../styles.css">
     </head>
     <body>
-        <h1>Language</h1>
-        <p>HTML, CSS, and Java</p>
+        <div class = "banner">
+            <div class = "navbar">
+                <img src="../pictures/logo.jpg" class="logo" alt="EL logo">
+                <ul>
+                    <li><a href = "resume.html">Resume</a></li>
+                    <li><a href = "created_projects.html">Projects</a></li>
+                    <li><a href = "education.html">Education</a></li>
+                </ul>
+            </div>
+            <div class = "content">
+                <h1>CREATED PROJECTS</h1>
+                <p>A list of my projects including<br>its description and language.</p>
+            </div>
+        </div>
     </body>
 </html>
