--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang = "en">
     <head>
         <meta charset-"utf-8">
         <title>Resume</title>
+        <link rel = "stylesheet" href = "../styles.css">
     </head>
     <body>
-        <h1>Resume</h1>
-        <p>Quick background intro</p>
+        <div class = "banner">
+            <div class = "navbar">
+                <img src="../pictures/logo.jpg" class="logo" alt="EL logo">
+                <ul>
+                    <li><a href = "resume.html">Resume</a></li>
+                    <li><a href = "created_projects.html">Projects</a></li>
+                    <li><a href = "education.html">Education</a></li>
+                </ul>
+            </div>
+            <div class = "content">
+                <h1>RESUME</h1>
+                <p>A list of my job history and its descriptions including<br>internships, part-time, and full-time.</p>
+            </div>
+        </div>
     </body>
 </html>
